@@ -14,7 +14,6 @@ LICENSE
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
-META.yml
 README
 t/00sig.t
 t/01load.t
@@ -35,4 +34,6 @@ t/Math/BigRat/Test.pm
 t/requirer.t
 t/trap.t
 TODO
+META.yml                                 Module YAML meta-data (added by MakeMaker)
+META.json                                Module JSON meta-data (added by MakeMaker)
 SIGNATURE                                Public-key signature (added by MakeMaker)
